--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,11 @@
     <string name="open_drawer">open navigation drawer</string>
     <string name="close_drawer">close navigation drawer</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="newest_product">جدید ترین محصولات</string>
     <string name="best_quality">محبوب ترین محصولات</string>
     <string name="continue_text">ادامه مطلب</string>
     <string name="new_string">NEW</string>
+    <string name="customer_vote">نظرات کاربران</string>
+    <string name="details_of_product">مشخصات</string>
 </resources>
